# public-boost

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_FROM_SCRATCH.md  DEPLOY_QUICK_GUIDE.md  DEPLOY_STEP_BY_STEP.md  EMAIL_SETUP.md  HOSTING_REQUIREMENTS.md  HOSTING_REQUIREMENTS_REALISTIC.md  NEXT_STEPS.md  STAGE_1_MVP_BOUNDARIES.md  STAGE_2_ARCHITECTURE.md  STAGE_3_DATABASE_SCHEMA.md  STAGE_4_API_DESIGN.md  STAGE_5_FRONTEND_DESIGN.md  TEST_MIGRATION.md  VPS_OPTIMIZATION.md  VPS_REQUIREMENTS.md  YOUR_VPS_CONFIG.md  docker-compose.prod.yml  docker-compose.yml  env.example
backend/: Dockerfile  MIGRATION_GUIDE.md  apply_migrations.py  check_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py  test_api_demo.py  test_auth.py  test_communities.py  test_simple.py
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  auth.py  calendar.py  communities.py  dependencies.py  posts.py  upload.py  users.py
backend/app/core/: config.py  database.py  email.py  security.py
backend/app/models/: __init__.py  analytics.py  community.py  post.py  task.py  user.py
backend/app/schemas/: analytics.py  calendar.py  community.py  post.py  upload.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_migration.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/pages/: CalendarPage.tsx  CommunitiesPage.tsx  CompetitorsPage.tsx  DashboardPage.tsx  LoginPage.tsx  (+5 more)
nginx/: nginx.conf
(+25 files in other folders)
